<resources>
    <string name="app_name" translatable="false">homework3</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="namesurname">Name-Surname</string>
    <string name="submit">Submit</string>
    <string name="address">Address</string>
    <string name="email">E-Mail</string>
    <string name="major">Major</string>
    <string name="gpa">GPA</string>
    <string name="university">University</string>
    <string name="tap_again_to_go_homepage">Tap again to go Homepage</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="fill_required_field">Fill required field.</string>
</resources>