<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/tv_namesurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_150sdp"
        android:text="blank"
        android:textSize="@dimen/_20ssp"></TextView>

    <EditText
        android:id="@+id/et_university"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20ssp"
        android:ems="10"
        android:hint="@string/university"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_20ssp" />

    <EditText
        android:id="@+id/et_major"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20ssp"
        android:hint="@string/major"
        android:textSize="@dimen/_20ssp"></EditText>

    <EditText
        android:id="@+id/et_gpa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20ssp"
        android:inputType="numberDecimal"
        android:hint="@string/gpa"
        android:textSize="@dimen/_20ssp"></EditText>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textSize="@dimen/_20ssp"></Button>

</LinearLayout>