<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthActivity">

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20ssp"
        android:text="blank"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="@+id/tv_namesurname"
        app:layout_constraintTop_toBottomOf="@+id/tv_namesurname">

    </TextView>

    <TextView
        android:id="@+id/tv_namesurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20ssp"
        android:text="blank"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/tv_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/namesurname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"></TextView>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20ssp"
        android:text="blank"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/tv_university"
        app:layout_constraintEnd_toEndOf="@+id/tv_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_address">

    </TextView>

    <TextView
        android:id="@+id/tv_university"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20ssp"
        android:text="blank"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/tv_major"
        app:layout_constraintEnd_toEndOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email">

    </TextView>

    <TextView
        android:id="@+id/tv_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20ssp"
        android:text="blank"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/tv_gpa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tv_university">

    </TextView>

    <TextView
        android:id="@+id/tv_gpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20ssp"
        android:text="blank"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_university"
        app:layout_constraintTop_toBottomOf="@+id/tv_major"></TextView>

    <TextView
        android:id="@+id/namesurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20ssp"
        android:text="@string/namesurname"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

    </TextView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20ssp"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/address">

    </TextView>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20ssp"
        android:text="@string/address"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/namesurname"
        app:layout_constraintTop_toBottomOf="@+id/namesurname">

    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20ssp"
        android:text="@string/university"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20ssp"
        android:text="@string/major"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </TextView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20ssp"
        android:text="@string/gpa"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

    </TextView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>